# macabre

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
Formula/: macabre.rb
src/: diff.rs  main.rs  model.rs  sys.rs  sysinfo.rs  tui.rs
src/checks/: account.rs  appsec.rs  encryption.rs  firewall.rs  integrity.rs  mod.rs  network.rs  persistence.rs  privacy.rs  sharing.rs  updates.rs
src/report/: html.rs  json.rs  markdown.rs  mod.rs  terminal.rs
