[package]
name = "macabre"
version = "0.1.0"
edition = "2021"
description = "macOS hardening & security audit scanner"
authors = ["Sn0wAlice"]
license = "MIT"
repository = "https://github.com/Sn0wAlice/macabre"
homepage = "https://github.com/Sn0wAlice/macabre"
readme = "README.md"
keywords = ["macos", "security", "hardening", "audit", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "macabre"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
owo-colors = "4"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
ratatui = "0.29"
crossterm = "0.28"

[profile.release]
strip = true
lto = true
opt-level = "z"
